// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DSCard tests test default DSCard snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderRadius": 10,
      "elevation": 4,
      "height": "100%",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 5,
      "width": "100%",
    }
  }
/>
`;

exports[`DSCard tests test default DSCard with text snapshot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "borderRadius": 10,
      "elevation": 4,
      "height": "100%",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 5,
      "width": "100%",
    }
  }
>
  <Text>
    Test
  </Text>
</View>
`;
